update to swagger doc and type controllers
