# routes/type.routes.js
@@ -21,9 +21,9 @@ const storage = multer.diskStorage({
 
 const upload = multer({ storage });
 /** Image Field Defining routes */
-router.post('/:projectname/content/newImage', verifyToken, getParams, upload.single('file'), TypeController.addImage);
-router.get('/:projectname/content/deleteImage', verifyToken, getParams, TypeController.removeImage);
-router.get('/:projectname/content/getImages', verifyToken, getParams, TypeController.getImages);
+router.post('/:projectname/content/newimage', verifyToken, getParams, upload.single('file'), TypeController.addImage);
+router.get('/:projectname/content/deleteimage', verifyToken, getParams, TypeController.removeImage);
+router.get('/:projectname/content/images', verifyToken, getParams, TypeController.getImages);
 
 /** Text Field Defining routes */
 router.post('/:projectname/content/newText', verifyToken, getParams, TypeController.addText);
